fix: add scrollbar for tasks and lists overflowing cards

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 1rem;
+  height: 100vh;
 }
 
 button {
